fixed issues with how parts of the images were going off screen on larger devices

--- a/map-app/src/App.css
+++ b/map-app/src/App.css
@@ -77,14 +77,18 @@ body{
 }
 
 
-.image {
+.carousel {
   grid-area: image; 
   overflow: hidden;
+  height: 100%;
+  text-align: center;
 }
 
-.image img {
+.carousel img {
   max-width: 100%;
-  width: 100%;
+  height: 40vh;
+
+  
 }
 
 .introduction{
